--- a/index.css
+++ b/index.css
@@ -880,7 +880,17 @@ footer {
 }
 
 .checkbox-column input[type="checkbox"] {
+    width: 20px;
+    height: 20px;
     margin-right: 5px;
+}
+
+/* Adjust size for smaller screens */
+@media (max-width: 480px) {
+    .checkbox-column input[type="checkbox"] {
+        width: 16px;
+        height: 16px;
+    }
 }
 .footer-social-icons{
     display: flex;
