--- a/index.css
+++ b/index.css
@@ -838,7 +838,6 @@ footer {
 .footer-nav ul li a:hover {
     text-decoration: underline;
 }
-
 #submmit {
     border-radius: 25px;
     width: 100px;
@@ -872,14 +871,77 @@ footer {
     padding-right: 20px;
 }
 
-.checkbox-column div {
+.custom-checkbox {
     display: flex;
     align-items: center;
     margin-bottom: 10px;
 }
 
-.checkbox-column input[type="checkbox"] {
-    margin-right: 5px;
+.custom-checkbox input[type="checkbox"] {
+    display: none;
+}
+
+.custom-checkbox label::before {
+    content: "";
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    margin-right: 10px;
+    background-color: #fff;
+    box-shadow: inset 0 0 0 0.5px #50b3a2;
+}
+
+.custom-checkbox input[type="checkbox"]:checked + label::before {
+    background-color: #007bff; /* Blue background */
+    background-image: url('data:image/svg+xml;charset=UTF-8,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="white"%3E%3Cpath d="M13.485 1.843a.5.5 0 0 1 .07.638l-.057.07-8 8a.5.5 0 0 1-.638.057l-.07-.057-4-4a.5.5 0 0 1 .638-.765l.07.057 3.646 3.647 7.646-7.647a.5.5 0 0 1 .708 0z"/%3E%3C/svg%3E'); /* White checkmark */
+    background-size: 16px 16px;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.custom-checkbox label {
+    cursor: pointer;
+}
+
+/* Responsive CSS */
+@media (max-width: 1024px) {
+    .contact {
+        margin: 5px 50px;
+        padding: 0 50px;
+    }
+}
+
+@media (max-width: 768px) {
+    .contact {
+        margin: 5px 20px;
+        padding: 0 20px;
+    }
+}
+
+@media (max-width: 480px) {
+    .contact {
+        margin: 5px 10px;
+        padding: 0 10px;
+    }
+    
+    input[type="text"],
+    input[type="email"],
+    input[type="number"],
+    textarea {
+        width: 100%;
+        box-sizing: border-box;
+    }
+    
+    .button-container {
+        text-align: center;
+    }
+    
+    button {
+        width: 100%;
+        padding: 10px;
+    }
 }
 .footer-social-icons{
     display: flex;
@@ -946,4 +1008,10 @@ footer {
     .footer-nav ul li {
         margin: 5px 10px;
     }
+}
+.footer-social-icons{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
 }
